add tests
Signed-off-by: Kaushal Kumar <ravi.kaushal97@gmail.com>